# Q-A

./: ARCHITECTURE.md  README.md  app.py  document_qa.py  pattern_store.py  patterns.json  predefined_clauses.py  pyproject.toml  qa_context.md  qa_responses.md  requirements.txt  sample.txt  sample_document.txt  utils.py  vector_store.py
document_analysis/: .gitignore  README.md  requirements.txt
document_analysis/config/: settings.py
document_analysis/src/core/: document_qa.py  vector_store.py
document_analysis/src/utils/: file_utils.py  text_utils.py
document_analysis/src/web/: app.py
document_analysis/tests/: test_document_qa.py
